# 4th-devs

./: .gitignore  flagi.txt
Exercises/: 4th-devs-verify.http  Cargo.toml
Exercises/S01E01/: solve.rs
Exercises/S01E02/: solve.rs
Exercises/S01E03/: solve.rs
Exercises/S01E04/: solve.rs
Exercises/S01E05/: solve.rs
Exercises/src/: aidevs_verification.rs  lib.rs  llm_payload_service.rs  main.rs  suspect_selection.rs
exercises/: s01.http  s02.http
exercises/s01-rust/: Cargo.toml
exercises/s01-rust/E01/: job-tags-cache.json  solve.rs  suspects.json
exercises/s01-rust/E02/: solve.rs
exercises/s01-rust/E03/: solve.rs
exercises/s01-rust/E04/: solve.rs
exercises/s01-rust/E04/docs/: trasy-wylaczone.png.vision.txt
exercises/s01-rust/E05/: solve.rs
exercises/s01-rust/src/: csv_service.rs  env.rs  lib.rs  main.rs  openai_wrapper.rs  suspect_selection.rs
exercises/s02-python/: main.py  pyproject.toml
exercises/s02-python/src/s02_python/E01/: categorize.csv  solve.py
exercises/s02-python/src/s02_python/E02/: __init__.py
exercises/s02-python/src/s02_python/E05/: solve.py
exercises/s02-python/src/s02_python/services/: __init__.py  aidevs_verification.py  csv_service.py  openai_wrapper.py
