[package]
name = "exercises"
version = "0.1.0"
edition = "2024"
default-run = "exercises"

[[bin]]
name = "s01e01"
path = "S01E01/solve.rs"

[[bin]]
name = "s01e02"
path = "S01E02/solve.rs"

[[bin]]
name = "s01e03"
path = "S01E03/solve.rs"

[[bin]]
name = "s01e04"
path = "S01E04/solve.rs"

[[bin]]
name = "s01e05"
path = "S01E05/solve.rs"

[dependencies]
anyhow = "1.0.98"
axum = "0.7"
csv = "1.3.1"
dotenvy = "0.15.7"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
