[package]
name = "exercises"
version = "0.1.0"
edition = "2024"
default-run = "exercises"

[[bin]]
name = "e01"
path = "E01/solve.rs"

[[bin]]
name = "e02"
path = "E02/solve.rs"

[[bin]]
name = "e03"
path = "E03/solve.rs"

[[bin]]
name = "e04"
path = "E04/solve.rs"

[[bin]]
name = "e05"
path = "E05/solve.rs"

[dependencies]
anyhow = "1.0.98"
axum = "0.7"
csv = "1.3.1"
dotenvy = "0.15.7"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
